--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
 <body>
   <div class="container text-center buttonsDiv">
     <div class="row">
-      <form action="homepage" method="post">
+      <form action="login" method="post">
         <div class="col-6">
           <input type="text" name="userName" placeholder="email" required>
         </div>
