--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,10 +13,13 @@
   <div class="container text-center buttonsDiv">
     <div class="row">
       <form action="/" method="post">
-        <div class="col-6">
+        <div class="col-4">
+          <input type="text" name="firstUserName" placeholder="You're first name" required>
+        </div>
+        <div class="col-4">
           <input type="text" name="userName" placeholder="email" required>
         </div>
-        <div class="col-6">
+        <div class="col-4">
           <input type="text" name="password" placeholder="password" required>
         </div>
         <button type="post" name="button">Send</button>
