--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
-  </head>
-  <body>
 
-    <div class="container text-center buttonsDiv">
-      <div class="row">
-        <form class="col-6" action="/register" method="post">
-          <div>
-            <button class="btn btn-lg btn-outline-primary" type="post" name="button">register</button>
-          </div>
-        </form>
-        <form class="col-6" action="/login" method="post">
-          <div>
-            <button class="btn btn-lg btn-outline-success" type="post" name="button">login</button>
-          </div>
-        </form>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+
+<body>
+
+  <div class="container text-center buttonsDiv">
+    <div class="row">
+      <form class="col-6" action="/register" method="get">
+        <div>
+          <button class="btn btn-lg btn-outline-primary">register</button>
+        </div>
+      </form>
+      <form class="col-6" action="/login" method="get">
+        <div>
+          <button class="btn btn-lg btn-outline-success">login</button>
+        </div>
+      </form>
     </div>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
