--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,27 +3,37 @@
 
 <head>
   <meta charset="utf-8">
-  <title>register</title>
+  <title>Register</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-  <div class="container text-center buttonsDiv">
-    <div class="row">
-      <form action="/" method="post">
-        <div class="col-4">
-          <input type="text" name="firstUserName" placeholder="You're first name" required>
+  <div class="container my-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card shadow-sm p-4">
+          <h2 class="mb-4 text-center">Register</h2>
+          <form action="/register" method="post">
+            <div class="mb-3">
+              <input type="text" name="firstUserName" placeholder="Your first name" required class="form-control">
+            </div>
+            <div class="mb-3">
+              <input type="email" name="userName" placeholder="Email" required class="form-control">
+            </div>
+            <div class="mb-3">
+              <input type="password" name="password" placeholder="Password" required class="form-control">
+            </div>
+            <div class="d-grid">
+              <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+          </form>
+          <div class="mt-3 text-center">
+            <p>Already have an account? <a href="/login">Log in</a></p>
+          </div>
         </div>
-        <div class="col-4">
-          <input type="text" name="userName" placeholder="email" required>
-        </div>
-        <div class="col-4">
-          <input type="text" name="password" placeholder="password" required>
-        </div>
-        <button type="post" name="button">Send</button>
-      </form>
+      </div>
     </div>
   </div>
 
