--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="/">Think out loud</a>
+    </div>
+  </nav>
   <div class="container my-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
