--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,10 +22,11 @@
           <h2 class="mb-4 text-center">Register</h2>
           <form action="/register" method="post">
             <div class="mb-3">
-              <input type="text" name="firstUserName" placeholder="Your first name" required class="form-control">
+              <input type="text" name="firstUserName" placeholder="Your first name" required class="form-control"
+                maxlength="40">
             </div>
             <div class="mb-3">
-              <input type="email" name="userName" placeholder="Email" required class="form-control">
+              <input type="email" name="userName" placeholder="Email" required class="form-control" maxlength="100">
             </div>
             <div class="mb-3">
               <input type="password" name="password" placeholder="Password" required class="form-control">
